assume expected images if not provided
Signed-off-by: Alex Welch <me@alexwelch.com>

--- a/dashboard/views/analyze.haml
+++ b/dashboard/views/analyze.haml
@@ -6,7 +6,7 @@
     %input{ type: 'text', name: 'image', placeholder: 'e.g. centurylink/panamax-ui:latest', value: params[:image] }
   %label
     Expected Tags
-    %textarea{ name: 'expected', placeholder: 'gliderlabs/alpine:3.1' }= params[:expected]
+    %textarea{ name: 'expected', placeholder: 'gliderlabs/alpine:3.1' }= @expected.join("\r\n")
   %button Analyze
 
 .results
