--- a/dashboard/views/layout.haml
+++ b/dashboard/views/layout.haml
@@ -40,6 +40,16 @@
         display: block;
         margin-bottom: 15px;
         box-sizing: border-box;
+        background: black;
+        color: lime;
+        border: magenta 4px groove;
+        padding: 5px;
+      }
+      input, textarea {
+        outline: none;
+      }
+      input:focus, textarea:focus {
+        background: #111;
       }
 
       textarea {
